--- a/src/main/resources/templates/workorders/index.html
+++ b/src/main/resources/templates/workorders/index.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layout/main}"
 >
 <body>
-<section layout:fragment="content" id="work_order_page_content" class="container w-5/6 h-screen mx-auto mb-auto">
+<section layout:fragment="content" id="work_order_page_content" class="container w-full h-screen mx-auto mb-auto">
     <div th:replace="workorders/list"></div>
 </section>
 </body>
