Wednesday May 22, 2024 Evening

--- a/src/main/resources/templates/plans/plan_form.html
+++ b/src/main/resources/templates/plans/plan_form.html
@@ -4,6 +4,59 @@
 >
 <body>
     <div th:fragment="plan-form(plan, priorities, unplannedBatches)" id="plan-form" class="container mx-auto flex min-h-dvh flex-col">
+       <div class="w-full">
+        <nav aria-label="Progress" class="md:flex md:items-center md:justify-between">
+            <ol role="list" class="divide-y divide-gray-300 rounded-md border border-gray-300 md:flex md:divide-y-0">
+                <li class="relative md:flex md:flex-1">
+                    <!-- Completed Step -->
+                    <a href="#" class="group flex w-full items-center"  aria-current="step">
+                        <span class="flex items-center px-6 py-4 text-sm font-medium">
+                          <span class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-full border-2 border-indigo-600 group-hover:bg-blue-700">
+                            <span class="text-indigo-600 group-hover:text-white">01</span>
+                          </span>
+                          <span class="ml-4 text-sm font-medium text-indigo-600">Create Plan</span>
+                        </span>
+                    </a>
+                    <!-- Arrow separator for lg screens and up -->
+                    <div class="absolute right-0 top-0 hidden h-full w-5 md:block" aria-hidden="true">
+                        <svg class="h-full w-full text-gray-300" viewBox="0 0 22 80" fill="none" preserveAspectRatio="none">
+                            <path d="M0 -2L20 40L0 82" vector-effect="non-scaling-stroke" stroke="currentcolor" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                </li>
+                <li class="relative md:flex md:flex-1">
+                    <a href="#" class="group flex items-center"
+                       th:hx-get="@{/plans/machines}"
+                       hx-target="#plan_page_content"
+                    >
+                        <span class="flex items-center px-6 py-4 text-sm font-medium">
+                            <span class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-full border-2 border-gray-300 group-hover:border-gray-400">
+                              <span class="text-gray-500 group-hover:text-gray-900">02</span>
+                            </span>
+                            <span class="ml-4 text-sm font-medium text-gray-500 group-hover:text-gray-900">Machine Selection</span>
+                        </span>
+                    </a>
+                    <!-- Arrow separator for lg screens and up -->
+                    <div class="absolute right-0 top-0 hidden h-full w-5 md:block" aria-hidden="true">
+                        <svg class="h-full w-full text-gray-300" viewBox="0 0 22 80" fill="none" preserveAspectRatio="none">
+                            <path d="M0 -2L20 40L0 82" vector-effect="non-scaling-stroke" stroke="currentcolor" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                </li>
+                <li class="relative md:flex md:flex-1">
+                    <!-- Upcoming Step -->
+                    <a href="#" class="group flex items-center">
+                        <span class="flex items-center px-6 py-4 text-sm font-medium">
+                          <span class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-full border-2 border-gray-300 group-hover:border-gray-400">
+                            <span class="text-gray-500 group-hover:text-gray-900">03</span>
+                          </span>
+                          <span class="ml-4 text-sm font-medium text-gray-500 group-hover:text-gray-900">Machine Configuration</span>
+                        </span>
+                    </a>
+                </li>
+            </ol>
+        </nav>
+       </div>
         <form method="dialog" th:action="@{/plans}" th:object="${plan}"
         >
             <div class="grid grid-cols-6 gap-3 mt-1">
@@ -17,7 +70,6 @@
 
                     />
                 </div>
-
 
                 <div class="text-start  col-span-1">
                     <lable class="text-lg font-semibold">Start Date</lable> <br>
@@ -36,73 +88,7 @@
                         <option th:each="priority : ${priorities}" th:text="${priority}" th:value="${priority}"></option>
                     </select>
                 </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Customer</lable> <br>
-                    <select class="select border-2 border-gray-300 rounded px-3 py-2 w-56  col-span-2">
-                        <option>Kenworth</option>
-                        <option>Boeing</option>
-                        <option>Metro</option>
-                    </select>
-                </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Harness</lable> <br>
-                    <select class="select border-2 border-gray-300 rounded px-3 py-2 w-56  col-span-2">
-                        <option>Harness 1</option>
-                        <option>Harness 2</option>
-                        <option>Harness 3</option>
-                    </select>
-                </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Start Site</lable> <br>
-                    <select class="select border-2 border-gray-300 rounded px-3 py-2 w-56  col-span-2">
-                        <option>Ararat</option>
-                        <option>Melbourne</option>
-                        <option>Malaysia</option>
-                    </select>
-                </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Start Location</lable> <br>
-                    <select class="select border-2 border-gray-300 rounded px-3 py-2 w-56  col-span-2">
-                        <option>Cutting</option>
-                        <option>Pre-assembly</option>
-                        <option>Blue</option>
-                    </select>
-                </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Delivery Site</lable> <br>
-                    <select class="select border-2 border-gray-300 rounded px-3 py-2 w-56  col-span-2">
-                        <option>Ararat</option>
-                        <option>Melbourne</option>
-                        <option>Malaysia</option>
-                    </select>
-                </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Delivery Location</lable> <br>
-                    <select class="select border-2 border-gray-300 rounded px-3 py-2 w-56  col-span-2">
-                        <option>Cutting</option>
-                        <option>Pre-assembly</option>
-                        <option>Blue</option>
-                    </select>
-                </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Quantity</lable> <br>
-                    <input id="quantity" type="number" name="plan-description"
-                           class="input iborder-2 border-gray-300 rounded px-3 py-2 w-full"
-                           placeholder="Description"
 
-                    />
-                </div>
-                <div class="text-start  w-full col-span-1">
-                    <lable class="text-lg font-semibold">Special Code</lable> <br>
-                    <select class="select border-2 border-gray-300 rounded px-3 py-2 w-56  col-span-2">
-                        <option>00 - Standard</option>
-                        <option>03 - Rebuild</option>
-                        <option>04 - Component</option>
-                        <option>06 - Injection</option>
-                        <option>10 - KW Kanban</option>
-                        <option>99 - Under Lead Time</option>
-                    </select>
-                </div>
             </div>
 
             <div class="flex flex-row w-full mt-5 gap-5">
